@@ -1,3 +1,4 @@
+	* add a number of missing functions to the python binding
 	* fix typo in Jamfile for building shared libraries
 	* prevent tracker exchange for magnet links before metadata is received
 	* fix crash in make_magnet_uri when generating links longer than 1024 characters
